<resources>
    <string name="app_name">NotesGB</string>
    <string name="remove">Back</string>
    <string name="add_btn">Add</string>
    <string name="finish">FINISH</string>
    <string name="set_date">Set date in 00/00/0000 format</string>
    <string name="set_name">Name this note</string>
    <string name="set_content">Add content</string>
    <string name="remove_menu">Delete all</string>
    <string name="toolbar_title">My notes</string>
    <string name="toolbar_details_title">Note details</string>
    <string name="toolbar_add_title">Add note</string>
    <string name="preferences">Preferences</string>
    <string name="search_text">search</string>
    <string name="notes_list">Notes list</string>
    <string name="nav_drawer_header">Smart notebook</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="exit_dialog_title">Do you really want to exit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="exit_message">Application \"NotesGB\" closed</string>
    <string name="action_edit">Edit note</string>
    <string name="action_delete">Delete</string>
    <string name="edit_title_hint">Title</string>
    <string name="edit_content_hint">Content</string>
    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>
</resources>