<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/action_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_notes"
            android:title="@string/notes_list" />
        <item
            android:id="@+id/action_preferences"
            android:title="@string/preferences" />

    </group>

    <group
        android:id="@+id/action_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search_text" />
        <item
            android:id="@+id/action_exit"
            android:icon="@drawable/ic_baseline_run_circle_24"
            android:title="exit" />
    </group>
</menu>