<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/exit_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin"
        android:text="@string/exit_dialog_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/exit_dialog_title">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_yes_btn"
            android:layout_width="@dimen/btn_length"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/yes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_no_btn"
            android:layout_width="@dimen/btn_length"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/no" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>